<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorPrimary">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_create_account"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/reg_logo"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/bangers"
        android:text="@string/new_account_text"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/reg_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/EmailHint"
        android:padding="18dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/whitetransparenthalf"
        />

    <EditText
        android:id="@+id/reg_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/PasswordHint"
        android:padding="18dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/whitetransparenthalf"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/reg_conpassword_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_password_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/conPasswordHint"
        android:padding="18dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/whitetransparenthalf"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/reg_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_conpassword_text"
        android:layout_alignLeft="@+id/reg_conpassword_text"
        android:layout_alignRight="@+id/reg_conpassword_text"
        android:layout_marginLeft="0dp"
        android:background="@color/colorAccent"
        android:text="@string/create_account_text"
        android:textColor="#FFFFFF" />


    <Button
        android:id="@+id/reg_old_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/reg_conpassword_text"
        android:layout_alignLeft="@+id/reg_conpassword_text"
        android:text="@string/oldaccount"
        android:textColor="@color/colorAccent"
        android:background="#FFFFFF"
        android:padding="18dp"
        android:layout_marginBottom="15dp"
        />




</RelativeLayout>