<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary">


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:visibility="invisible" />
    <TextView
        android:id="@+id/loginlogo"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/bangers"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="105dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/EmailHint"
        android:padding="18dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/whitetransparenthalf" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailtext"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/PasswordHint"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/whitetransparenthalf" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_marginLeft="0dp"
        android:background="@color/colorAccent"
        android:text="@string/loginbutton"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/new_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:text="@string/buttonnewaccount"
        android:textColor="@color/colorAccent"
        android:background="#FFFFFF"
        android:padding="18dp"
        android:layout_marginBottom="15dp"
        />
</RelativeLayout>